--- a/zapatos.scss
+++ b/zapatos.scss
@@ -6,7 +6,11 @@
   }
 @import 'menu';
 @import 'social';
+/**Products*/
+
 @import 'products';
+/**Products*/
+
 /**Color Variables*/
 
 // Other colors
