--- a/_products.scss
+++ b/_products.scss
@@ -1,63 +1,69 @@
 @mixin MQ($size) {
     @media only screen and (min-width: $size) {
-      @content;
+        @content;
     }
-  }
+}
+
 * {
     font-family: 'Poppins', sans sans-serif;
 }
-main.nike{
+
+main.nike {
     margin-top: 25rem;
     width: 100%;
 }
+
 .productos {
-    @include  MQ($medium){
+    @include MQ($medium) {
         width: 100%;
         display: grid;
-grid-template-columns: auto auto; 
-   }
-   @include MQ($large){
-       grid-template-columns:repeat(3, auto)
-   }
+        grid-template-columns: auto auto;
+    }
+
+    @include MQ($large) {
+        grid-template-columns: repeat(3, auto)
+    }
+
     width: 100%;
     position: relative;
     display: grid;
-grid-template-columns: auto;
+    grid-template-columns: auto;
     align-items: center;
     justify-content: center;
     width: 100%;
     transform-style: preserve-3d;
 
     .box {
+        transition: 0.7s;
         position: relative;
-        width: 400px;
-        height: 600px;
+        width: 200px;
+        height: 400px;
         margin: 40px;
-        background: #232323;
+        background: #d7d5c9;
         border-radius: 20px;
         transform-style: preserve-3d;
 
         &::before {
-            content: 'NIKE';
+            content: 'KISTH';
             position: absolute;
             top: 20px;
-            left: 20px;
+            left: 30px;
             font-size: 6em;
             font-weight: 900;
-            color: #fff;
+            color: bla;
             font-style: italic;
             opacity: 0;
             transition: 0.5s;
         }
 
         &::after {
-            content: 'SHOES';
+            content: 'T-SHIRT';
             position: absolute;
             bottom: 20px;
             left: 0px;
             font-size: 5.5em;
             font-weight: 900;
-            color: #fff;
+            color: black;
             font-style: italic;
             opacity: 0;
             transition: 0.5s;
@@ -76,19 +82,24 @@ grid-template-columns: auto;
         top: 0;
         left: 0;
         text-align: center;
-        color: #fff;
+        color: black;
         width: 100%;
         transform-style: preserve-3d;
         transform: translate3d(0, 0, 75px);
-        transition: 0.5s;
+        transition: 0.8s ease-in-out;
         opacity: 0;
         z-index: 10;
     }
 }
 
+.productos .box:hover{
+    width: 400px;
+    height: 600px;
+}
 .productos .box:hover .name {
     top: 5px;
     opacity: 1;
+    font-size: 1.2rem;
 }
 
 .productos .box .buy {
@@ -109,49 +120,52 @@ grid-template-columns: auto;
 .productos .box:hover .buy {
     bottom: 30px;
     opacity: 1;
+    padding: 1.5rem;
 }
 
 div.productos .box .circle {
-   position: absolute; 
-   top: 50%;
-   left: 50%;
-   width: 200px;
-   height: 200px;
-   border-radius: 50%;
-   transition: 0.5s;
-   background: #fff;
-   transform-style: preserve-3d;
-   z-index: 10;
-   opacity: 1;
-    transform: translate3d(-50%,-50%,50px) ;
-}
-div.productos .box .product{
     position: absolute;
-    max-width: 300px;
+    top: 50%;
+    left: 50%;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    transition: 0.5s;
+    background: #fff;
+    transform-style: preserve-3d;
+    z-index: 10;
+    opacity: 1;
+    transform: translate3d(-50%, -50%, 50px);
+}
+
+div.productos .box .product {
+    position: absolute;
+    max-width: 200px;
     top: 50%;
     left: 50%;
     z-index: 11;
     transition: 0.5s;
     transform-style: preserve-3d;
-    transform: translate3d(-50%,-50%,50px) rotate(-10deg);
+    transform: translate3d(-50%, -50%, 50px) rotate(-10deg);
 }
-div.productos .box:hover .product{
-    transform: translate3d(-50%,-50%,100px);
 
+div.productos .box:hover .product {
+    transform: translate3d(-50%, -50%, 100px);
+    max-width: 300px;
 
 }
 
 .productos .box:nth-child(1) .circle,
-.productos .box:nth-child(1) .buy
-{
+.productos .box:nth-child(1) .buy {
     background: #379bf7;
 }
+
 .productos .box:nth-child(2) .circle,
-.productos .box:nth-child(2) .buy
-{
+.productos .box:nth-child(2) .buy {
     background: red;
-}.productos .box:nth-child(3) .circle,
-.productos .box:nth-child(3) .buy
-{
+}
+
+.productos .box:nth-child(3) .circle,
+.productos .box:nth-child(3) .buy {
     background: grey;
 }
