--- a/zapatos.css
+++ b/zapatos.css
@@ -436,6 +436,7 @@ body .container {
   background: #333;
 }
 
+/**Products*/
 * {
   font-family: 'Poppins', sans sans-serif;
 }
@@ -481,24 +482,26 @@ main.nike {
 }
 
 .productos .box {
+  -webkit-transition: 0.7s;
+  transition: 0.7s;
   position: relative;
-  width: 400px;
-  height: 600px;
+  width: 200px;
+  height: 400px;
   margin: 40px;
-  background: #232323;
+  background: #d7d5c9;
   border-radius: 20px;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
 }
 
 .productos .box::before {
-  content: 'NIKE';
+  content: 'KISTH';
   position: absolute;
   top: 20px;
-  left: 20px;
+  left: 30px;
   font-size: 6em;
   font-weight: 900;
-  color: #fff;
+  color: bla;
   font-style: italic;
   opacity: 0;
   -webkit-transition: 0.5s;
@@ -506,13 +509,13 @@ main.nike {
 }
 
 .productos .box::after {
-  content: 'SHOES';
+  content: 'T-SHIRT';
   position: absolute;
   bottom: 20px;
   left: 0px;
   font-size: 5.5em;
   font-weight: 900;
-  color: #fff;
+  color: black;
   font-style: italic;
   opacity: 0;
   -webkit-transition: 0.5s;
@@ -529,21 +532,27 @@ main.nike {
   top: 0;
   left: 0;
   text-align: center;
-  color: #fff;
+  color: black;
   width: 100%;
   -webkit-transform-style: preserve-3d;
           transform-style: preserve-3d;
   -webkit-transform: translate3d(0, 0, 75px);
           transform: translate3d(0, 0, 75px);
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 0.8s ease-in-out;
+  transition: 0.8s ease-in-out;
   opacity: 0;
   z-index: 10;
+}
+
+.productos .box:hover {
+  width: 400px;
+  height: 600px;
 }
 
 .productos .box:hover .name {
   top: 5px;
   opacity: 1;
+  font-size: 1.2rem;
 }
 
 .productos .box .buy {
@@ -567,6 +576,7 @@ main.nike {
 .productos .box:hover .buy {
   bottom: 30px;
   opacity: 1;
+  padding: 1.5rem;
 }
 
 div.productos .box .circle {
@@ -589,7 +599,7 @@ div.productos .box .circle {
 
 div.productos .box .product {
   position: absolute;
-  max-width: 300px;
+  max-width: 200px;
   top: 50%;
   left: 50%;
   z-index: 11;
@@ -604,6 +614,7 @@ div.productos .box .product {
 div.productos .box:hover .product {
   -webkit-transform: translate3d(-50%, -50%, 100px);
           transform: translate3d(-50%, -50%, 100px);
+  max-width: 300px;
 }
 
 .productos .box:nth-child(1) .circle,
@@ -621,6 +632,7 @@ div.productos .box:hover .product {
   background: grey;
 }
 
+/**Products*/
 /**Color Variables*/
 .logo {
   width: 110px;
